write_test-cases

--- a/requirements.yml
+++ b/requirements.yml
@@ -4,12 +4,10 @@ functional:
   - пользователь должен иметь возможность зайти на сайт через электронную почту, аккаунт в Гитхабе или через Discord
   - пользователь должен иметь возможность создать игру с выбором параметров (уровень, тип игры, время)
   - после создания игра должна быть доступна для выбранного соперника или других пользлвателей исходя из выбранной опции
-  - второй пользователь должен иметь возможность присоединиться к игре
+  - пользователь должен иметь возможность присоединиться к игре созданной другим пользователем
   - пользователь должен иметь возможность выбрать язык программирования в игре
   - пользователь должен иметь возможность писать в чат игры
-  - пользователь должен иметь возможность проверить свой код через кнопку "check"
   - пользователь должен иметь возможность переподключиться к игре, если он вылетел из игры
-  - пользователь должен иметь возможность выйти из игры через кнопку "exit"
 non-functional:
   - сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы
   - сайт должен быть безопасным и защищать данные пользователя
