--- a/test-cases.yml
+++ b/test-cases.yml
@@ -1,8 +1,8 @@
 ---
 - summary: |
-    Проверка регистрации пользователя на сайте через электронную почту
+    Проверка регистрации через электронную почту
   requirement: |
-    При вводе логине и пароля пользователь должен зарегестрироваться на сайте
+    При вводе логине и пароля пользователь должен успешно зарегестрироваться на сайте
   prerequisites: |
     Открыта страница регистрации
   test-data: |
@@ -14,12 +14,12 @@
     - Вводим подтверждение пороля
     - Нажимаем кнопку «Submit»
   expected-result: |
-    Пользователь успешно зарегестрировался и переходит на главную страницу
+    Пользователь успешно зарегестрировался
 
 - summary: |
-    Проверка входа пользователя на сайт через электронную почту
+    Проверка авторизации зарегистрированного пользователя
   requirement: |
-    При верном вводе логина и пароля пользователь должен войти в систему
+    При верном вводе логина и пароля пользователь должен успешно авторизоваться в систему
   prerequisites: |
     открыта страница логина
   test-data: |
@@ -29,26 +29,26 @@
     - Вводим пароль
     - Нажимаем кнопку «Submit»
   expected-result: |
-    Пользователь должен попасть на главную страницу
+    Пользователь успешно авторизован
 
 - summary: |
-    Проверка входа пользователя на сайт через аккаунт на Гитхаб
+    Проверка авторизации через Github
   requirement: |
-    При наличие аккаунта на Гитхаб пользователь должен войти в систему
+    При наличие аккаунта на Github пользователь должен успешно авторизоваться в системе
   prerequisites: |
-    Открыта страница логина, наличие аккаунта на Гитхаб
+    Открыта страница логина, наличие аккаунта на Github
   test-data: |
     Нет данных
   steps:
     - Нажимаем кнопку "Sign in with Github"
-    - Вводим логин и пароль от Гитхаб
+    - Вводим логин и пароль от Github
   expected-result: |
-    Пользователь должен попасть на главную страницу
+    Пользователь успешно авторизован через GitHub
 
 - summary: |
-    Проверка входа пользователя на сайт через аккаунт на Discord
+    Проверка авторизации черех Discord
   requirement: |
-    При наличие аккаунта на Discord пользователь должен войти в систему
+    При наличие аккаунта на Discord пользователь должен успешно авторизоваться в системе
   prerequisites: |
     Открыта страница логина, наличие аккаунта на Discord
   test-data: |
@@ -57,12 +57,12 @@
     - Нажимаем кнопку "Sign in with Discord"
     - Вводим логин и пароль от Discord
   expected-result: |
-    Пользователь должен попасть на главную страницу
+    Пользователь успешно авторизован через Discord
 
 - summary: |
     Создание игры с ботом
   requirement: |
-    После выбора параметров пользователь должен попасть в созданную игру
+    После выбора параметров игра должна быть успешно создана
   prerequisites: |
     Открыта главная страница сайта
   test-data: |
@@ -75,10 +75,10 @@
     - Вводим выше описанные параметры
     - Нажимаем кнопку "Create Battle"
   expected-result: |
-    Пользователь должен попасть на страницу с игрой
+    Успешно создана игра с ботом и заданными параметрами
 
 - summary: |
-    Создание игры с другими пользователями
+    Отображение созданной игры с пользователем в окне "LOBBY"
   requirement: |
     После выбора параметров игра должна появиться в окне "LOBBY" на главной странице сайта
   prerequisites: |
@@ -94,6 +94,24 @@
     - Нажимаем кнопку "Create Battle"
   expected-result: |
     Созданная игра должна появиться в окне "LOBBY" на главной странице сайта
+
+- summary: |
+    Создание игры с другими пользователями
+  requirement: |
+    После выбора параметров игра должна быть успешно создана
+  prerequisites: |
+    Открыта главная страница сайта
+  test-data: |
+    Level = например одна звезда
+    Game Type = with other users
+    Time control = например 3 min
+    Choose task by name or tags = например Random task
+  steps:
+    - Нажимаем кнопку "Create a game"
+    - Вводим выше описанные параметры
+    - Нажимаем кнопку "Create Battle"
+  expected-result: |
+    Игра с пользователем успешно создана
 
 - summary: |
     Проверка входа в игру созданную другим пользователем
