--- a/testing-report.yml
+++ b/testing-report.yml
@@ -1,22 +1,26 @@
 ---
 - summary: |
-    Проверка регистрации пользователя на сайте через электронную почту
+    Проверка регистрации через электронную почту
   status: pass
 
 - summary: |
-    Проверка входа пользователя на сайт через электронную почту
+    Проверка авторизации зарегистрированного пользователя
   status: pass
 
 - summary: |
-    Проверка входа пользователя на сайт через аккаунт на Гитхаб
+    Проверка авторизации через Github
   status: pass
 
 - summary: |
-    Проверка входа пользователя на сайт через аккаунт на Discord
+    Проверка авторизации черех Discord
   status: pass
 
 - summary: |
     Создание игры с ботом
+  status: pass
+
+- summary: |
+    Отображение созданной игры с пользователем в окне "LOBBY"
   status: pass
 
 - summary: |
